--- a/views/current.handlebars
+++ b/views/current.handlebars
@@ -1,5 +1,5 @@
 <div id="main" class="container p-md-5">
     <div class="jumbotron bg-white shadow">
-        Hello {{userID}}
+        Hello {{name}}
     </div>
 </div>
