--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -24,8 +24,11 @@
                         <li class="nav-item {{#if add}}active{{else}}{{/if}} mr-sm-4">
                             <a class="nav-link" href="/admin">Add</a>
                         </li>
-                        <li class="nav-item {{#if list}}active{{else}}{{/if}} mr-sm-4">
-                            <a class="nav-link" href="/admin/list">List</a>
+                        <li class="nav-item {{#if manage}}active{{else}}{{/if}} mr-sm-4">
+                            <a class="nav-link" href="/admin/manage">Manage</a>
+                        </li>
+                        <li class="nav-item {{#if courses}}active{{else}}{{/if}} mr-sm-4">
+                            <a class="nav-link" href="/admin/courses">Courses</a>
                         </li>
                         {{/if}}
                         {{#if student}}
@@ -44,13 +47,16 @@
                             <a class="nav-link" href="/faculty/previous">Previous</a>
                         </li>
                         {{/if}}
-                        <li class="nav-item dropdown">
+                        {{!-- <li class="nav-item dropdown">
                             <div class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Account
                             </div>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                 <a class="dropdown-item" href="/users/logout">Logout</a>
                             </div>
+                        </li> --}}
+                        <li class="nav-item mr-sm-4">
+                            <a class="nav-link" href="/users/logout">Logout</a>
                         </li>
                     </ul>
                 </div>
