--- a/views/previous.handlebars
+++ b/views/previous.handlebars
@@ -43,6 +43,7 @@
                         </div>
                         <div class="col-md-4">
                             <div class="btn-group" role="group" aria-label="Basic example">
+                                <button class="btn btn-primary" type="submit" name="manage" value="sub">Submissions</button>
                                 <button class="btn btn-secondary" type="submit" name="manage" value="edit">Edit</button>
                                 <button class="btn btn-danger" data-toggle="confirmation">Delete</button>
                             </div>
